Update: createPosts
