# router/post.go
@@ -15,3 +15,12 @@ func getPostsHandler(c echo.Context) error {
 	}
 	return c.JSON(http.StatusOK, posts)
 }
+
+func createPostsHandler(c echo.Context) error {
+	post := new(posts.Post)
+	err := c.Bind(post)
+	if err != nil {
+		return return500(c, "createPostsError", err)
+	}
+	return c.NoContent(http.StatusOK)
+}
